# GeelEngine

./: CMakeLists.txt  README.md
docs/: BUILD.md
include/: Geel.h
include/core/: Window.h
libs/: CMakeLists.txt  installer.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Geel.cpp
src/core/: Window.cpp
tools/EngineManager/: EngineManager.cpp  EngineManager.h
